--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ button {background-color: white; color: dark grey; style: Times new roman; font-
 <H1> <CENTER> SUPERNATURAL TODAY </CETER> </H1>
 
 <div> 
-<CENTER><img src="abc/a.jpg" alt="html" title="supernatural" width="500px"></CENTER>
+<CENTER><img src="Картинки/a.jpg" alt="html" title="supernatural" width="500px"></CENTER>
 </div>
 
 
