--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ button {background-color: white; color: dark grey; style: Times new roman; font-
 <H2 class="first">  SO, IF YOU WANT...  </H2>
 
 <UL>
-<li> <form action="file:///C:/Users/Inko/supernatural02.github.io/ab/2%20life%20after%20death.html" method="get"> <button type="submit">TO KNOW MORE ABOUT LIFE AFTER DEATH</button></form></li>
-<li> <form action="file:///C:/Users/Inko/supernatural02.github.io/ab/3%20deja%20vu.html" method="get"> <button type="submit">TO KNOW MORE ABOUT DEJA VU</button></form> </li>
-<li> <form action="file:///C:/Users/Inko/supernatural02.github.io/ab/4%20vision.html" method="get"> <button type="submit">TO KNOW MORE ABOUT VISIONS AND HALLUCINATIONS</button></form> </li>
+<li> <a href="ab/2%20life%20after%20death.html"> <button type="submit">TO KNOW MORE ABOUT LIFE AFTER DEATH</button></a></li>
+<li> <a href="ab/3%20deja%20vu.html"> <button type="submit">TO KNOW MORE ABOUT DEJA VU</button></a> </li>
+<li> <a href="ab/4%20vision.html"> <button type="submit">TO KNOW MORE ABOUT VISIONS AND HALLUCINATIONS</button></a> </li>
 </UL>
 
 <p>P.S. Have you had something (or better yet someone) in your life and have you had a deep connection with? How did it end up? Please, send your stories on nastyushkaurs@gmail.com. </p>
